--- a/layouts/partials/about/subteam.html
+++ b/layouts/partials/about/subteam.html
@@ -3,8 +3,9 @@
         <img src="{{ .image }}" />
     </td>
     <td>
-        # {{ .title }}
-
-        {{ .description }}
+        <h1>{{ .title }}</h1>
+        <p>
+            {{ .description }}
+        </p>
     </td>
 </tr>
