--- a/themes/hugo-initio-master/layouts/partials/subheader.html
+++ b/themes/hugo-initio-master/layouts/partials/subheader.html
@@ -1,16 +1,16 @@
 <div class="row section topspace">
     <div class="col-md-12">
         <p class="lead text-center text-muted">
-            <h1 font="Pullman" style="font-size: 40pt; text-align: center"> <font face="Pullman">We Build More Than Robots</h1>
-            <h1 font="Pullman" style="font-size: 40pt; text-align: center"> <font face="Pullman">We Build Futures </h1>
+            <h1 font="Pullman" style="font-size: 40pt; text-align: center"> We Build More Than Robots</h1>
+            <h1 font="Pullman" style="font-size: 40pt; text-align: center"> We Build Futures </h1>
             <br />
-          <p style="font-size: 15pt; text-align: center"> <font face="Helvetica">Through community outreach, partnerships, and recruitment our team 2811 inspires, transforms, and shapes the world around us into a place where innovation, technology, and the sciences are celebrated.  As a team we cultivate an environment for growth that extends beyond our team, aiming to engage, inspire, and educate both our team members and members of our community. Our motto, “We build more than robots we build futures,” motivates each student and mentor to strive for a personal best every day. This helps our members develop self-confidence, communication skills, as well as a passion for science and technology that will last throughout their lifetime.
+          <p style="font-size: 15pt; text-align: center"> Through community outreach, partnerships, and recruitment our team 2811 inspires, transforms, and shapes the world around us into a place where innovation, technology, and the sciences are celebrated.  As a team we cultivate an environment for growth that extends beyond our team, aiming to engage, inspire, and educate both our team members and members of our community. Our motto, “We build more than robots we build futures,” motivates each student and mentor to strive for a personal best every day. This helps our members develop self-confidence, communication skills, as well as a passion for science and technology that will last throughout their lifetime.
             <br />This is our vision, this is StormBots.</p>
             <hr />
           <br />
-            <h3 font="Pullman" style="font-size: 30pt; text-align: center"> <font face="Pullman">MENTORS AND PARENTS ARE NEEDED FOR TEAM GROWTH AND SUCCESS</h3>
+            <h3 font="Pullman" style="font-size: 30pt; text-align: center"> MENTORS AND PARENTS ARE NEEDED FOR TEAM GROWTH AND SUCCESS</h3>
           <br />
-          <p style="font-size: 15pt; text-align: center"> <font face="Helvetica">  None of what we do would be possible without our mentors and parent volunteers. Mentors give the gifts of their time, life wisdom and professional experience all of which help us grow into mature,
+          <p style="font-size: 15pt; text-align: center">   None of what we do would be possible without our mentors and parent volunteers. Mentors give the gifts of their time, life wisdom and professional experience all of which help us grow into mature,
             responsible and caring adults ourselves. They all come from different career paths, not just engineering but they all bring the same thing: knowledge critical to our team's functioning and our growth
             as individuals. They teach us to program. They show us how to build robots. They show us by their example how to plan, organize and lead a project. They give us help when we need it, but never
             interfere or do things themselves. Without our mentors, this team wouldn't be able to work and do the things it does. We thank all of our mentors and parent volunteers for the amazing gifts they
