--- a/themes/hugo-initio-master/layouts/shortcodes/Game.html
+++ b/themes/hugo-initio-master/layouts/shortcodes/Game.html
@@ -5,10 +5,10 @@
     <a href="/{{ replace (.Get 0) " " "_" }}"><img style="text-align: left" src="/images/games/first{{ replace (.Get 0) " " "_" }}.png"/> </td>
     </center>
   <td>
-    <h1 style="font-size: 40pt; text-align: center"> <font face="Pullman">
+    <h1 style="font-size: 40pt; text-align: center">
       First {{ .Get 0 | title }}: {{ .Get 1 }}
     </h1>
-    <p style="text-align: center"> <font face="Helvetica">
+    <p style="text-align: center">
     {{ .Get 2 }}
     <br />
     <a href="/{{ replace (.Get 0) " " "_" }}"><img style="text-align: right" src="/images/LearnMoreButton.png" width="200" height="40"/>
@@ -21,10 +21,10 @@
 
 <tr>
     <td>
-    <h1 style="font-size: 40pt; text-align: center"> <font face="Pullman">
+    <h1 style="font-size: 40pt; text-align: center">
       First {{ .Get 0 | title }}: {{ .Get 1 }}
     </h1>
-    <p style="text-align: center"> <font face="Helvetica">
+    <p style="text-align: center">
     {{ .Get 2 }}
     <br />
     <a href="/{{ replace (.Get 0) " " "_" }}"><img style="text-align: right" src="/images/LearnMoreButton.png" width="200" height="40"/>
