--- a/themes/hugo-initio-master/static/css/styles.css
+++ b/themes/hugo-initio-master/static/css/styles.css
@@ -164,6 +164,7 @@ border-bottom: 1px solid #0c0030;
 p {
   line-height: 1.6em;
   margin: 0 0 30px 0;
+  font-family: Helvetica;
 }
 ul,
 ol {
@@ -187,7 +188,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-  font-family: "Open sans", Helvetica, Arial, sans-serif;
+  font-family: "Pullman", Helvetica, Arial, sans-serif;
   font-weight: 400;
   color: #0c0030;
 }
