--- a/layouts/partials/about/subteam.html
+++ b/layouts/partials/about/subteam.html
@@ -1,6 +1,6 @@
 <tr>
     <td>
-        <img src="{{ .image }}" />
+        <img src="{{ .image }}" width="300" />
     </td>
     <td>
         <h1>{{ .title }}</h1>
