--- a/themes/hugo-initio-master/layouts/partials/home.html
+++ b/themes/hugo-initio-master/layouts/partials/home.html
@@ -1,27 +1,51 @@
 <main id="main">
 
-	<div class="container">
+    <div class="container">
 
         {{ if .Site.Params.showSubheader }}
-            {{ partial "subheader.html" . }}
+        {{ partial "subheader.html" . }}
         {{ end }}
 
+        <hr />
+
+        <div class="row section topspace">
+            <div class="col-md-12">
+                <h1 class="center">Recent Updates</h1>
+
+                <hr />
+
+                {{ range first 3 (where .Site.Pages "Section" "posts") }}
+                    <article class="post">
+                        <header class="entry-header">
+                            <div class="entry-meta">
+                                <span class="posted-on"><time class="entry-date published" date="{{ .Date }}">{{ dateFormat .Site.Params.DateForm .Date }}</time></span>
+                            </div>
+                            <h1 class="entry-title"><a href="{{ .Permalink }}" rel="bookmark">{{ .Title }}</a></h1>
+                        </header>
+                        <div class="entry-content">
+                            {{ .Render "summary"}}
+                        </div>
+                    </article>
+                {{ end }}
+            </div>
+        </div>
+
         {{ if .Site.Params.showServices }}
-            {{ partial "services.html" . }}
+        {{ partial "services.html" . }}
         {{ end }}
 
         {{ if .Site.Params.showRecentWorks }}
-            {{ partial "recentworks.html" . }}
+        {{ partial "recentworks.html" . }}
         {{ end }}
 
         {{ if .Site.Params.showDownload }}
-            {{ partial "download.html" . }}
+        {{ partial "download.html" . }}
         {{ end }}
 
         {{ if .Site.Params.showClients }}
-            {{ partial "clients.html" . }}
+        {{ partial "clients.html" . }}
         {{ end }}
 
-	</div>	<!-- /container -->
+    </div> <!-- /container -->
 
 </main>
