--- a/layouts/about/single.html
+++ b/layouts/about/single.html
@@ -9,9 +9,9 @@
             <!-- Article main content -->
             <article class="col-sm-12 maincontent">
 
-                <h1 style="text-align: center"><font face="Pullman"> Skyview Stormbots: 2811</h1>
+                <h1 style="text-align: center">Skyview Stormbots: 2811</h1>
 
-                <p style="font-size: 15"><font face="Helvetica">
+                <p style="font-size: 15">
                     {{ .Site.Data.about.main_content | markdownify }}
                 </p>
 
