--- a/themes/hugo-initio-master/layouts/partials/subheaderOLD.html
+++ b/themes/hugo-initio-master/layouts/partials/subheaderOLD.html
@@ -1,13 +1,13 @@
 <div class="row section topspace">
     <div class="col-md-12">
         <p class="lead text-center text-muted">
-            <h1 font="Pullman" style="font-size: 40pt; text-align: center"> We Build More Than Robots</h1>
-            <h1 font="Pullman" style="font-size: 40pt; text-align: center"> We Build Futures </h1>
+            <h1 style="font-size: 40pt; text-align: center"> We Build More Than Robots</h1>
+            <h1 style="font-size: 40pt; text-align: center"> We Build Futures </h1>
             <br />
             <p style="font-size: 15pt; text-align: center"> This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement.</p>
 <br />
 <br />
-<h3 font="Pullman" style="font-size: 25pt; text-align: center"> MENTORS AND PARENTS ARE NEEDED FOR TEAM GROWTH AND SUCCESS</h3>
+<h3 style="font-size: 25pt; text-align: center"> MENTORS AND PARENTS ARE NEEDED FOR TEAM GROWTH AND SUCCESS</h3>
   <br />
   <p style="font-size: 15pt; text-align: center">  None of what we do would be possible without our mentors and parent volunteers. Mentors give the gifts of their time, life wisdom and professional experience all of which help us grow into mature,
 
