font change, Pullman does not support character set

--- a/themes/hugo-initio-master/layouts/partials/header.html
+++ b/themes/hugo-initio-master/layouts/partials/header.html
@@ -15,6 +15,7 @@
 	<!-- Icons -->
 	<link href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
 	<!-- Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700">
 	<!-- Custom styles -->
 	<link rel="stylesheet" href="{{ .Site.BaseURL }}css/styles.css">
