--- a/themes/hugo-initio-master/static/css/styles.css
+++ b/themes/hugo-initio-master/static/css/styles.css
@@ -215,7 +215,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-    font-family: "Pullman", Helvetica, Arial, sans-serif;
+    font-family: "Righteous", Helvetica, Arial, sans-serif;
     font-weight: 400;
     color: #0c0030;
 }
